[gd_scene load_steps=6 format=3 uid="uid://cp463rpri5j8a"]

[ext_resource type="Script" path="res://addons/dialogic/Modules/Character/settings_portraits.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://dbpkta2tjsqim" path="res://addons/dialogic/Editor/Common/hint_tooltip_icon.tscn" id="2_dce78"]
[ext_resource type="PackedScene" uid="uid://dpwhshre1n4t6" path="res://addons/dialogic/Editor/Events/Fields/ComplexPicker.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://7mvxuaulctcq" path="res://addons/dialogic/Editor/Events/Fields/FilePicker.tscn" id="4_mdfuu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y1x6o"]
content_margin_left = 4.0
content_margin_top = 0.0
content_margin_right = 4.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="Portraits" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")

[node name="Animations" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="Title" type="Label" parent="Animations"]
layout_mode = 2
theme_type_variation = &"DialogicSection"
text = "Custom Animations
"

[node name="HintTooltip" parent="Animations" instance=ExtResource("2_dce78")]
layout_mode = 2
hint_text = "Set where dialogic will look for custom animations."

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Custom animations folder"

[node name="CustomAnimationsFolder" parent="HBoxContainer" instance=ExtResource("4_mdfuu")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_y1x6o")
file_mode = 2

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="Animations2" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="Title2" type="Label" parent="Animations2"]
layout_mode = 2
theme_type_variation = &"DialogicSection"
text = "Default Animations
"

[node name="HintTooltip" parent="Animations2" instance=ExtResource("2_dce78")]
layout_mode = 2
tooltip_text = "Set where dialogic will look for custom animations."
hint_text = "These settings are used for Leave and Join events if no animation is selected."

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="Label3" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Join:"

[node name="DefaultIn" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2

[node name="JoinDefault" parent="GridContainer/DefaultIn" instance=ExtResource("3")]
unique_name_in_owner = true
layout_mode = 2
enable_pretty_name = true

[node name="JoinDefaultLength" type="SpinBox" parent="GridContainer/DefaultIn"]
unique_name_in_owner = true
layout_mode = 2
step = 0.1

[node name="JoinDefaultWait" type="CheckButton" parent="GridContainer/DefaultIn"]
unique_name_in_owner = true
layout_mode = 2
text = "Wait:"

[node name="Label4" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Leave:"

[node name="DefaultOut" type="HBoxContainer" parent="GridContainer"]
layout_mode = 2

[node name="LeaveDefault" parent="GridContainer/DefaultOut" instance=ExtResource("3")]
unique_name_in_owner = true
layout_mode = 2
enable_pretty_name = true

[node name="LeaveDefaultLength" type="SpinBox" parent="GridContainer/DefaultOut"]
unique_name_in_owner = true
layout_mode = 2
step = 0.1

[node name="LeaveDefaultWait" type="CheckButton" parent="GridContainer/DefaultOut"]
unique_name_in_owner = true
layout_mode = 2
text = "Wait:"

[connection signal="value_changed" from="GridContainer/DefaultIn/JoinDefault" to="." method="_on_JoinDefault_value_changed"]
[connection signal="value_changed" from="GridContainer/DefaultIn/JoinDefaultLength" to="." method="_on_JoinDefaultLength_value_changed"]
[connection signal="toggled" from="GridContainer/DefaultIn/JoinDefaultWait" to="." method="_on_JoinDefaultWait_toggled"]
[connection signal="value_changed" from="GridContainer/DefaultOut/LeaveDefault" to="." method="_on_LeaveDefault_value_changed"]
[connection signal="value_changed" from="GridContainer/DefaultOut/LeaveDefaultLength" to="." method="_on_LeaveDefaultLength_value_changed"]
[connection signal="toggled" from="GridContainer/DefaultOut/LeaveDefaultWait" to="." method="_on_LeaveDefaultWait_toggled"]
